tests/pass/MinusAssign.java
package pass;

public class MinusAssign {

    public int doMinusAssign(int x, int y){
        x -= y;
        return x;
    }
}
