tests/fail/MinusAssign.java
package fail;

public class MinusAssign {
    public static void main(){
        int x = 5;
        System.out.println(x -= 'a');
    }
}
